# SimpleGraphRust

./: .env  .gitignore  Cargo.toml  README.md  Rocket.toml
backend/: Cargo.toml
frontend/: package.json  server.ts  store.js
frontend/.next/server/static/development/pages/: index.js  index.js.map
frontend/.next/static/development/pages/: _app.js  _app.js.map  _error.js  _error.js.map  index.js  index.js.map
frontend/.next/static/runtime/: main.js  main.js.map  webpack.js  webpack.js.map
frontend/actions/: index.js
frontend/pages/: index.js
frontend/partials/: results.js
src/: graph.rs  main.rs  pool.rs  result_getter.rs  tests.rs
src/templates/: index.html.hbs
src/templates/js/: app.js  package.json  store.js
src/templates/js/actions/: index.js
src/templates/js/pages/: index.js
src/templates/js/partials/: Form.js  form.js
src/templates/js/reducers/: index.js
