[package]
name = "rust_six_degrees"
version = "0.1.0"
authors = ["Craig Harley <craigharley2@googlemail.com>"]
edition = "2018"

[dependencies]
mysql = "15.1.0"
time = "*"
rocket = "*"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
dotenv="*"
[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["handlebars_templates", "json"]
